# edict

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PROJECT_HISTORY.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  spec.lock.json
.github/workflows/: auto-release-tag.yml  ci.yml  release.yml
crates/edict-cli/: Cargo.toml
crates/edict-cli/src/: lib.rs  main.rs
crates/edict-cli/tests/: golden_cli.rs  jsonl_cli.rs
crates/edict-syntax/: Cargo.toml
crates/edict-syntax/src/: admission.rs  ast.rs  authority_facts.rs  canonical.rs  compiler.rs  contract_bundle.rs  core_ir.rs  highlight.rs  lib.rs  lowerability.rs  parser.rs  semantic.rs  target_ir.rs  target_profile.rs  token.rs
crates/edict-syntax/tests/: admission.rs  authority_facts.rs  canonical_encoding.rs  compiler_spine.rs  contract_bundle.rs  core_golden_fixtures.rs  highlighting.rs  lowerability.rs  parse_control_flow.rs  parse_greeting.rs  parse_hello.rs  parse_keywords.rs  parse_loops.rs  parse_negative.rs  parse_review_regressions.rs  parse_variants.rs  semantic_validation.rs  target_ir.rs  target_profile.rs
crates/edict-syntax/tests/common/: mod.rs
docs/: DESIGN_runtime-neutral-edict-sha-lock-assurance.md  GUIDE_edict-assurance-transparency.md  README.md  REQUIREMENTS.md  RETRO_phase1-parser.md  SPEC_continuum-admission-v1.md  SPEC_continuum-contract-bundle-v1.md  SPEC_edict-language-v1.md  SPEC_edict-lawpack-abi-v1.md  SPEC_edict-target-profile-abi-v1.md  TECHNICAL_EXPLANATION.md
docs/abi/: edict-common.cddl  edict-core.cddl  edict-lawpack.cddl  edict-target-lowerer.wit  edict-target-profile.cddl
docs/audit/: 2026-06-28_code-quality.md  2026-06-28_documentation-quality.md  2026-06-28_ship-readiness.md
docs/design/: authority-fact-governance.md  canonical-target-ir-v0.11.md  contract-bundle-assembly-v0.11.md  crate-scope-v0.11.md  schema-as-sot-codegen.md  v2-obligation-closure.md
docs/releases/: v0.1.0-alpha.1.md  v0.10.0-alpha.1.md  v0.11.0-alpha.1.md  v0.2.0-alpha.1.md  v0.3.0-alpha.1.md  v0.4.0-alpha.1.md  v0.5.0-alpha.1.md  v0.6.0-alpha.1.md  v0.7.0-alpha.1.md  v0.8.0-alpha.1.md  v0.9.0-alpha.1.md
docs/schemas/: edict.cli-check-result.v1.schema.json  edict.cli-diagnostic.v1.schema.json  edict.cli-event.v1.schema.json  edict.cli-info.v1.schema.json  edict.compiler-input.v1.schema.json  (+1 more)
editors/: README.md
fixtures/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs  (+5 more)
(+111 files in other folders)
