[workspace]
members = ["crates/edict-syntax", "xtask"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/edict"
rust-version = "1.85"

# Maximize strictness (flyingrobots house rule): no unsafe, warnings are errors.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
