[package]
name = "edict-cli"
version = "0.11.0-alpha.1"
description = "Edict JSONL compiler command-line interface"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "edict"
path = "src/main.rs"

[dependencies]
edict-syntax = { path = "../edict-syntax" }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
