[package]
name = "edict-syntax"
version = "0.11.0-alpha.1"
description = "Edict language syntax, authority facts, compiler spine, Core canonical encoding, admission, target-profile, lowerability, bundle, and developer tooling checks"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
